2009-01-07  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Add --gnu option.  Don't warn about unnecessary
	padding when --gnu was on command line.

2009-01-07  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: More checking DW_AT_sibling correctness.
	- Rewrite abbrev_table_load logic for detecting sequences of
	zeroes inside abbreviation section.

2009-01-06  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Checking DW_AT_sibling correctness.

2009-01-06  Ulrich Drepper  <drepper@redhat.com>

	* readelf.c: Implement call frame debug section dumping.

2009-01-01  Ulrich Drepper  <drepper@redhat.com>

	* addr2line.c: Update copyright year.
	* ar.c: Likewise.
	* elfcmp.c: Likewise.
	* elflint.c: Likewise.
	* findtextrel.c: Likewise.
	* ld.c: Likewise.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* ranlib.c: Likewise.
	* readelf.c: Likewise.
	* size.c: Likewise.
	* strings.c: Likewise.
	* strip.c: Likewise.
	* unstrip.c: Likewise.

2009-01-01  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Tweaks across the code:
	- Memory allocation now done with xrealloc, xcalloc functions.  As
	a consequence, backoff for out of memory conditions was turned off.
	- Coding style was improved on many places.
	- Abbrev tag and name validation changed, everything up to the
	hi_user is now accepted.
	- Ambiguous references to NULL DIEs and Abbrevs were changed to
	explicitly mention DIE with zero code and similar.

2008-12-15  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: New file.

2008-12-11  Roland McGrath  <roland@redhat.com>

	* nm.c (sym_name): New function.
	(show_symbols_sysv): Use it in place of elf_strptr.
	(show_symbols_bsd, show_symbols_posix): Likewise.
	Fixes RHBZ#476136.

	* nm.c (show_symbols_sysv): Use an alloca'd backup section name when
	elf_strptr fails.

2008-12-02  Roland McGrath  <roland@redhat.com>

	* readelf.c (count_dwflmod, process_file): Don't presume encoding of
	nonzero OFFSET argument to dwfl_getmodules.
